--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 \usepackage{tcolorbox} % for adding colored text boxes
 \usepackage{bm} % Adding bold text to math inputs
 \usepackage{pgfplots} % Used for plotting functions
+\usepackage{background}
 
 % Setting up the default image path
 \graphicspath{{./Images/}}
@@ -46,6 +47,18 @@
 	\renewcommand{\footrulewidth}{1pt}
 }
 \pagestyle{customStyle}
+
+% Settings for the background package
+\backgroundsetup{
+    scale=1, % Size - adjust as necessary
+    color=black, % Color of the logo
+    opacity=0.1, % Opacity - adjust to your liking; 0 = fully transparent, 1 = fully opaque
+    angle=0, % Rotation angle if you want to rotate the logo
+    position=current page.center, % Position - you can change this as necessary
+    vshift=0cm, % Vertical shift - adjust as necessary
+    hshift=0cm, % Horizontal shift - adjust as necessary
+    contents={\includegraphics[width=10cm]{Images/Logo}} % Replace 'your_logo_filename' with the name of your logo file
+}
 
 % Setting up hyperref options
 \hypersetup {
