Add the author, title, and abstract

--- a/main.tex
+++ b/main.tex
@@ -35,8 +35,8 @@
 \graphicspath{{./Images/}}
 
 % Implementing authro details
-\title{}
-\author{}
+\title{Understanding Probability and Statistics: Homework Solutions}
+\author{Emre Arapcic-Uevak}
 \date{}
 
 % Setting up the fancy page style
@@ -79,7 +79,7 @@
 	
 	\begin{abstract}
 		\begin{center}
-			\noindent abstract
+			\noindent \"Understanding Probability and Statistics: Homework Solutions\" is a straightforward and accessible document designed to assist students in grasping the fundamental concepts of probability and statistics. This assignment blends traditional hand-written problem-solving methods with basic Python programming to offer a practical approach to learning. It covers a variety of problems, from simple probability calculations to more intricate statistical analyses. Each question is addressed with clear, concise solutions, demonstrating the process step-by-step, both on paper and through Python code. This approach not only helps in understanding the theoretical aspects but also in applying these concepts practically. The document serves as an essential tool for students looking to strengthen their foundation in probability and statistics through hands-on learning and problem-solving.
 		\end{center}
 	\end{abstract}
 	\pagebreak
