--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,9 @@
 \usepackage{bm} % Adding bold text to math inputs
 \usepackage{pgfplots} % Used for plotting functions
 \usepackage{background}
+\usepackage{cancel} % For cancelling terms visually
+\usepackage{microtype} % Improves spacing
+\usepackage{booktabs} % For nicer tables
 
 % Setting up the default image path
 \graphicspath{{./Images/}}
@@ -103,50 +106,62 @@
 
             \begin{enumerate}[label=(\alph*)]
                 \item
-                    \begin{align*}
+                \[
+                    \begin{aligned}
                         \binom{10}{6} &= \frac{10!}{6!(10-6)!} \\
-                        &= \frac{10 \cdot 9 \cdot 8 \cdot 7 \cdot 6!}{6! \cdot 4!} \\
+                        &= \frac{10 \cdot 9 \cdot 8 \cdot 7 \cdot \cancel{6!}}{\cancel{6!} \cdot 4 \cdot 3 \cdot 2 \cdot 1} \\
                         &= \frac{10 \cdot 9 \cdot 8 \cdot 7}{4 \cdot 3 \cdot 2 \cdot 1} \\
-                        &= 210
-                    \end{align*}
+                        &= \boxed{210}
+                    \end{aligned}
+                \]
 
                 \item
-                    \begin{align*}
+                \[
+                    \begin{aligned}
                         P(\text{at least one r,b,g}) &= 1 - P(\text{no r,b,g}) \\
                         &= 1 - \left( \frac{\binom{7}{6}}{\binom{10}{6}} \right) \\
                         &= 1 - \left( \frac{7}{210} \right) \\
                         &= 1 - \frac{1}{30} \\
                         &= \frac{29}{30} \\
-                        &= 0.9667
-                    \end{align*}
+                        &= \boxed{0.9667}
+                    \end{aligned}
+                \]
 
                 \item
-                    \begin{align*}
-                        P(3 \text{ elemental,3 technology}) &= \left( \frac{\binom{4}{3} \cdot \binom{6}{3}}{\binom{10}{6}} \right) \\
-                        &= \frac{4 \cdot \frac{6!}{3!3!}}{210} \\
+                \[
+                    \begin{aligned}
+                        P_{3 \text{ elemental,3 technology}} &= \left( \frac{\binom{4}{3} \cdot \binom{6}{3}}{\binom{10}{6}} \right) \\
+                        &= \frac{4 \cdot \frac{6!}{3! \cdot 3!}}{210} \\
                         &= \frac{4 \cdot 20}{210} \\
                         &= \frac{80}{210} \\
                         &= \frac{8}{21} \\
-                        &= 0.38
-                    \end{align*}
+                        &= \boxed{0.38}
+                    \end{aligned}
+                \]
 
                 \item
-                    \begin{align*}
-                        P(2 \text{ of 3 strongest}) &= \left( \frac{\binom{3}{2} \cdot \binom{7}{4}}{\binom{10}{6}} \right) \\
-                        &= \frac{3 \cdot \frac{7!}{4!3!}}{210} \\
+                \[
+                    \begin{aligned}
+                        P_{2 \text{ of 3 strongest}} &= \left( \frac{\binom{3}{2} \cdot \binom{7}{4}}{\binom{10}{6}} \right) \\
+                        &= \frac{3 \cdot \frac{7!}{4! \cdot 3!}}{210} \\
                         &= \frac{3 \cdot 35}{210} \\
                         &= \frac{105}{210} \\
                         &= \frac{1}{2} \\
-                        &= 0.5
-                    \end{align*}
+                        &= \boxed{0.5}
+                    \end{aligned}
+                \]
 
                 \item
-                    \begin{align*}
-                        P(\text{both selected}) &= \left( \frac{\binom{2}{2} \cdot \binom{8}{4}}{\binom{10}{6}} \right) \\
-                        &= \frac{1 \cdot \frac{8!}{4!4!}}{210} \\
+                \[
+                    \begin{aligned}
+                        P_{\text{both selected}} &= \left( \frac{\binom{2}{2} \cdot \binom{8}{4}}{\binom{10}{6}} \right) \\
+                        &= \frac{1 \cdot \frac{8!}{4! \cdot 4!}}{210} \\
                         &= \frac{70}{210} \\
                         &= \frac{1}{3} \\
-                        &= 0.3333
-                    \end{align*}
+                        &= \boxed{0.3333}
+                    \end{aligned}
+                \]
             \end{enumerate}
+
+    \pagebreak
 \end{document}
