--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \usepackage{cancel} % For cancelling terms visually
 \usepackage{microtype} % Improves spacing
 \usepackage{booktabs} % For nicer tables
+\usepackage{parskip}
 
 % Setting up the default image path
 \graphicspath{{./Images/}}
@@ -164,4 +165,54 @@
             \end{enumerate}
 
     \pagebreak
+    
+    \section{Adventurer Problem}
+        \subsection{Problem Text}
+            \noindent Imagine you are an adventurer on a quest to discover the fabled Enchanted Treasure Chests hidden deep in a mysterious forest. As you embark on your adventure, you come across three magical treasure chests, each guarded by a forest spirit. You believe that one of these chests contains the legendary Enchanted Jewel, while the other two chests hold only rocks. Here's how your quest unfolds:
+
+            \begin{itemize}
+                \item The three treasure chests are placed before you, each with a unique mystical symbol: Chest X, Chest Y, and Chest Z. The Enchanted Jewel is hidden in one of these chests, but you have no idea which one.
+                \item You must make an initial choice and select one of the three chests. This will be your starting selection.
+                \item The forest spirits, knowing the contents of each chest, will then reveal one of the two remaining chests that does not contain the Enchanted Jewel. They always choose one of the two non-Jewel chests to reveal.
+                \item You are now faced with a decision. You can either stick with your initial choice or switch to the other unopened chest.
+            \end{itemize}
+
+            What is the probability of discovering the Enchanted Jewel if you choose to switch chests, and what is the probability of finding it if you stick with your initial selection? Provide a detailed explanation of your answer, including any probability calculations. Please remember to show your work and offer a clear rationale for your response.
+
+        \subsection{Solution}
+            \subsubsection{Probability Calculation}
+                Given three chests X, Y, and Z, the probabilities are as follows:
+
+                \begin{align*}
+                    P(X) &= \frac{1}{3} \\
+                    P(Y \text{ or } Z) &= \frac{2}{3}
+                \end{align*}
+
+                \noindent Spirit choices:
+                \begin{align*}
+                    P(Y \text{ or } Z | X) &= \frac{1}{2} \quad \text{if I choose chest with jewel (X)} \\
+                    P(Z | Y) &= 1 \quad \text{if I choose chest with rock}
+                \end{align*}
+
+                \noindent Case 1: Sticking with initial choice
+                \begin{align*}
+                    P(\text{Jewel} | \text{initial choice}) &= P(X) \cdot \left(1 - P(Y \text{ or } Z | X)\right) \\
+                    &= \frac{1}{3} \cdot \left(1 - \frac{1}{2}\right) \\
+                    &= \frac{1}{3} \cdot \frac{1}{2} \\
+                    &= \frac{1}{6}
+                \end{align*}
+
+                \noindent Case 2: Switching to other chest
+                \begin{align*}
+                    P(\text{Jewel} | \text{switch}) &= P(Y \text{ or } Z) \cdot P(Z | Y) \\
+                    &= \frac{2}{3} \cdot 1 \\
+                    &= \frac{2}{3}
+                \end{align*}
+
+            \subsubsection{Explanation}
+                \begin{enumerate}
+                    \item \textbf{Initial Choice:} The probability of selecting the chest with the jewel upon the initial choice is \( \frac{1}{3} \), as each of the three chests has an equal chance of containing the jewel. Assuming I initially choose the chest with the jewel, the spirit then has a \( \frac{1}{2} \) probability of opening one of the other two chests. Consequently, the probability of obtaining the jewel by sticking with the initial choice is \( \frac{1}{6} \), which is the product of the initial correct choice and the spirit's subsequent action.
+
+                    \item \textbf{Switching Choice:} If my initial choice is incorrect, which occurs with a probability of \( \frac{2}{3} \), the jewel must be in one of the other two chests. Since the spirit will always reveal a chest without the jewel, the remaining unopened chest has a \( \frac{2}{3} \) chance of containing the jewel. Thus, switching the choice leads to a \( \frac{2}{3} \) probability of finding the jewel, reflecting the combined likelihood of the initial wrong choice and the guaranteed action of the spirit revealing a non-jewel chest.
+                \end{enumerate}
 \end{document}
