Add problem text for problem 4

--- a/main.tex
+++ b/main.tex
@@ -258,4 +258,19 @@
             Given the potential for higher profits, a rational player would choose to expand. However, this scenario assumes that both players are rational and have the same payoff values. In real-world scenarios, other factors such as risk preference, market capacity, and financial constraints could influence the decision.
             In our game-theoretical approach, we operate under the assumption that if one player chooses to expand and the other does not, the non-expander will incur a greater loss than if both players had chosen to expand. This is a critical consideration, as it influences the identification of Nash Equilibria within the model. However, there is an additional strategic element to consider. By allowing the competitor to expand without opposition, the non-expander not only sustains immediate financial losses but also risks yielding significant market share to the competitor. This could potentially weaken their competitive position in the long term. Conversely, the decision not to expand, while resulting in short-term financial disadvantage, may enable a business to capitalize on future opportunities and overtake the competition as circumstances evolve. It is imperative, therefore, to balance the immediate economic implications against the long-term strategic outlook, recognizing that ceding ground in the short term might offer tactical advantages later on.
 
+    \section{Simulation of Rolling a 12-Sided Die}
+        \subsection{Problem Text}
+            Write a program in your preferred programming language that simulates the rolling of a 12-sided die a varying number of times. The program should be structured to perform the following steps:
+
+            \begin{enumerate}
+                \item Roll the die 100 times and calculate the average value of these rolls.
+                \item Roll the die 1,000 times and calculate the average value of these rolls.
+                \item Roll the die 10,000 times and calculate the average value of these rolls.
+                \item Roll the die 100,000 times and calculate the average value of these rolls.
+            \end{enumerate}
+
+            After each set of rolls, compare the calculated average values with the expected value of a roll. The expected value should be calculated by hand in advance of running the simulations.
+
+        \subsolution{Solution}
+
 \end{document}
