Add styling for code listings

--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,25 @@
 	pdftex
 }
 
+% Define the style for the code listings
+\lstdefinestyle{mystyle}{
+    commentstyle=\color{gray},
+    keywordstyle=\color{blue},
+    numberstyle=\tiny\color{gray},
+    stringstyle=\color{purple},
+    basicstyle=\ttfamily\small,
+    breakatwhitespace=false,
+    breaklines=true,
+    captionpos=b,
+    keepspaces=true,
+    numbers=left,
+    numbersep=5pt,
+    showspaces=false,
+    showstringspaces=false,
+    showtabs=false,
+    tabsize=2
+}
+
 % Custom commands
 
 
@@ -271,6 +290,6 @@
 
             After each set of rolls, compare the calculated average values with the expected value of a roll. The expected value should be calculated by hand in advance of running the simulations.
 
-        \subsolution{Solution}
-
+        \subsection{Solution}
+            \subsubsection{Code}
 \end{document}
