--- a/main.tex
+++ b/main.tex
@@ -309,4 +309,30 @@
         \subsection{Solution}
             \subsubsection{simulation}
                 \lstinputlisting[language=Python]{Code/task4.py}
+                The output obtained from running the dice roll simulation code is as follows:
+
+                \begin{verbatim}
+Average for 100 rolls: 6.86
+Average for 1,000 rolls: 6.44
+Average for 10,000 rolls: 6.48
+Average for 100,000 rolls: 6.49
+                \end{verbatim}
+
+            \subsubsection{Hand Calculation}
+                Given a 12-sided die with outcomes $x_i$ for $i=1,2,\ldots,n$ and $n=12$, the average value $\mu$ is calculated as follows:
+                \begin{equation*}
+                    \mu = \frac{\sum_{i=1}^{n} x_i}{n}
+                \end{equation*}
+
+                The expected value $E(X)$ for a discrete random variable is calculated using the probability $p(x_i)$ of each outcome $x_i$:
+                \begin{equation*}
+                    \mu = E(X) = \sum_{i=1}^{n} x_i p(x_i) = \frac{1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10 + 11 + 12}{12} = \frac{78}{12} = 6.5
+                \end{equation*}
+    
+            \subsubsection{Explanation of the difference between the simulated and hand calculated values}
+                The observed differences between the hand-calculated expected values and the simulated averages from rolling a 12-sided die can be explained by the Law of Large Numbers in probability theory. The theoretical expected value, calculated as the mean outcome of a 12-sided die, is 6.5. This value is predicated on the assumption of an infinite number of rolls for perfect randomization.
+
+                In a simulation with a finite number of trials, random fluctuations and variance will influence the results. These random perturbations can cause the simulated averages to deviate from the expected value, particularly noticeable in smaller sample sizes such as 100 rolls. As the number of trials increases, these simulated averages should, according to the Law of Large Numbers, converge toward the expected value, reflecting the average of the distribution of outcomes.
+
+                Despite increasing the number of trials, perfect convergence to the expected value is not guaranteed due to the inherent randomness of each roll. Consequently, the simulated average may not exactly match the expected value but should approximate it more closely as the number of trials grows.
 \end{document}
