Finish work on problem6

--- a/main.tex
+++ b/main.tex
@@ -377,4 +377,20 @@ Average for 100,000 rolls: 6.49
 
                 Visualizations such as box plots and histograms provided early indications of the outliers' effects on the dataset's distribution. These visual tools revealed a more focused and distinct distribution pattern after the removal of outliers, allowing for a clearer and more accurate understanding of the dataset's characteristics.
 
+    \section{Dice Game Simulation}
+        \subsection{Problem Text}
+            Create a program using a preferred programming language that simulates a dice game with the following rules:
+
+            \begin{itemize}
+                \item The player starts with a specified initial amount of money (input by the user).
+                \item The player bets on the outcome of rolling two fair six-sided dice.
+                \item If the total number of the dice roll result is even, the player wins 2 BAM.
+                \item If the total number of the dice roll result is odd, the player loses 1.5 BAM.
+                \item The game continues until the player's balance reaches 0 BAM or less.
+            \end{itemize}
+
+            The program should keep track of the number of rolls and the player's current balance after each roll (output).
+
+        \subsection{Solution}
+            \lstinputlisting[language=Python]{Code/task6.py}
 \end{document}
